// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global doesn't write falsy css callback 1`] = `<DocumentFragment />`;

exports[`Global writes css 1`] = `
<DocumentFragment>
  <style
    data-cache="dash"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Global writes css callback 1`] = `
<DocumentFragment>
  <style
    data-cache="dash"
    data-dash="1saj6jl-global"
  >
    color:var(--dash-black);
  </style>
</DocumentFragment>
`;

exports[`Global writes css object 1`] = `
<DocumentFragment>
  <style
    data-cache="dash"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Global writes css w/ nonce 1`] = `
<DocumentFragment>
  <style
    data-cache="dash"
    data-dash="1abu38z-global"
    nonce="E8gagwlWEGlgwel"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Theme allows additional props and class names: span 1`] = `
<DocumentFragment>
  <div
    class="foo bar dash-light-theme"
    role="button"
  />
</DocumentFragment>
`;

exports[`Theme renders \`as\` prop: span 1`] = `
<DocumentFragment>
  <span
    class="dash-dark-theme"
  />
</DocumentFragment>
`;

exports[`Theme throws when theme name wasn't found 1`] = `"Theme not found: \\"medium\\""`;

exports[`Theme uses name prop to derive className: span 1`] = `
<DocumentFragment>
  <div
    class="dash-light-theme"
  />
</DocumentFragment>
`;

exports[`useVariables provides dash variables via DashProvider 1`] = `
Object {
  "blue": "var(--dash-blue)",
  "red": "var(--dash-red)",
}
`;

exports[`useVariables provides dash variables via styles() 1`] = `
Object {
  "blue": "var(--dash-blue)",
  "red": "var(--dash-red)",
}
`;
